--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "doc": "typedoc src/index.ts",
+    "doc": "typedoc --plugin typedoc-plugin-markdown --out docs ./src/*.ts",
     "lint": "ts-standard --fix .",
     "build": "tsc -p tsconfig.json",
     "prepublish": "npm run build"
@@ -40,6 +40,7 @@
     "eslint": "^8.34.0",
     "jest": "^26.6.3",
     "ts-standard": "^12.0.2",
+    "typedoc-plugin-markdown": "^3.15.4",
     "typescript": "^4.9.5"
   },
   "dependencies": {
