--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@babbage/sdk": "^0.4.47",
+    "@babbage/sdk-ts": "^0.2.7",
     "@babbage/tokenator": "^0.2.6",
     "authrite-js": "^0.4.7",
     "babbage-bsv": "^0.2.4",
